<resources>
    <string name="app_name">Генератор обоев</string>
    <string name="save_i_ustanovleno">Сохранено и установлено</string>
    <string name="Ustanovit">Установить обои</string>
    <string name="Sgeneririvat">Сгенерировать</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7908895047124036/4543040707</string>

    <string name="info_o_proge">
        Generate a Wallpaper\n\n
        created Deomin Dmitriy 2017\n\n
        lib:\n
        crop-https://github.com/biokys/cropimage
        \n
        image-com.squareup.picasso:picasso:2.5.2
         \n
        com.makeramen:roundedimageview:2.2.1
        \n\n\n
        Картинка генерируется рандомно(случйно), каждая следующая уникальна
        \n\n
        Клик на логотипе изменит цвет фона
        \n
        Долгий тап на логотипе сохранит/удалит цвет
    </string>
    <string name="saved">Сохранено</string>
    <string name="obrezano_i_save">Обрезано и сохранено</string>

    <array name="spisok_razresheniy">
        <item>100x100</item>
        <item>200x100</item>
        <item>300x100</item>
    </array>


    <string-array name="shemy">
        <item>1. Чистый фон</item>
        <item>2. Круг,квадрат,линии</item>
        <item>3. Много квадратов одинаковых(3 цвета)</item>
        <item>4. Осколки</item>
        <item>5. Много кругов 3-х видов</item>
        <item>6. Много разных кругов и квадратов</item>
        <item>7. Параллельные линии</item>
        <item>8. Линии в разброс</item>
        <item>9. Одноцветные круги по спирале Архимеда</item>
        <item>10. Разные круги по спирале Архимеда</item>
        <item>11. Cпираль Архимеда</item>
        <item>12. Одноцветные квадраты по спирале Архимеда</item>
        <item>13. Разноцветные круг в круге(разноразмерные)</item>
        <item>14. Числа в разброс</item>
        <item>15. Буквы в разброс</item>
        <item>16. Разноцветные круг в круге</item>
        <item>17. Сетка</item>
        <item>18. Линейный градиент</item>
        <item>19. Круговой градиент</item>
        <item>20. Радужный градиент</item>
        <item>21. Круговой фрактал</item>
        <item>22. Круговой фрактал рандом</item>
        <item>23. Фрактал Дракон Хартера-Хейтуэя</item>
        <item>24. Снежинка Коха</item>
        <item>25. Н-фрактал</item>
        <item>26. Мандельбротовы облака</item>
        <item>27. Центр масс треугольника</item>
        <item>28. Звезда Дюрера</item>
        <item>29. </item>
    </string-array>


    <string name="pi" translatable="false">
        3.1415926535897932384626433832795028841971693993751058209749445923078164062862089986280348253421170679821480865132823066470938446095505822317253594081284811174502841027019385211055596446229489549303819644288109756659334461284756482337867831652712019091456485669234603486104543266482133936072602491412737245870066063155881748815209209628292540917153643678925903600113305305488204665213841469519415116094330572703657595919530921861173819326117931051185480744623799627495673518857527248912279381830119491298336733624406566430860213949463952247371907021798609437027705392171762931767523846748184676694051320005681271452635608277857713427577896091736371787214684409012249534301465495853710507922796892589235420199561121290219608640344181598136297747713099605187072113499999983729780499510597317328160963185950244594553469083026425223082533446850352619311881710100031378387528865875332083814206171776691473035982534904287554687311595628638823537875937519577818577805321712268066130019278766111959092164201989
    </string>
    <string name="Svayp_sverhu_v_niz">Свайп с верху в низ</string>
    <string name="pokaget_knopki_navigacii">покажет кнопки навигации</string>
    <string name="dolgoe_nagatie_save_kartinku">(долгое нажатие сохранит картинку)</string>
    <string name="dolgoe_nagatie_zapustit_tik">(долгое нажатие запустит автомат тыкания)</string>
    <string name="svayp_levo_pravo">Свайп лево/право переключить схему</string>
    <string name="Menu">Меню</string>
    <string name="sozadot_oboi">Создать обои</string>
    <string name="izmenit_shemu_risovania">Изменить схему рисования</string>
    <string name="fon_save">Фон сохранён</string>
    <string name="fon_pri_zapuske_budet_random">Фон при запуске будет рандомный</string>
    <string name="nugno_kakoenibut_znachenie">Нужно какоенибуть значение(Установим по умолчанию)</string>
    <string name="o_proge">О программе</string>
    <string name="animacia">Анимация</string>
    <string name="animacia_text">Если не нужна , или подтормаживает выключите</string>
    <string name="perviy_ekran_s_help">Первый экран с надписями</string>
    <string name="help_text">При нажатии кнопки генерировать обои первым показывается информация где какая кнопка</string>
    <string name="ustanavlivat_oboi_avtomatom">Устанавливать обои автоматически</string>
    <string name="ustanavlivat_text">После нажатия верхней части экрана(Кнопки сохранения ) картинка автоматически устанавливается обоями в телефоне</string>
    <string name="obrezat_oboi">Обрезать обои</string>
    <string name="obrezat_text">Перед установкой(если она включена выше) будет предложено обрезать картинку чтобы был эффект прокрутки (если много рабочих столов).Если стол один рекомендуется выключить обрезку(качество картинки при обрезке падает)</string>
    <string name="vrema_tikania">Время автоматического тыкания 1000 = 1 секунда  (При длительном нажатии внизу экрана запускается )</string>
    <string name="save">Сохранить</string>
    <string name="vvedite_dla_poiska">Введите для поиска</string>
    <string name="del">Удалить</string>
    <string name="send">Отправить</string>
    <string name="open_sistem">Открыть в системе</string>
    <string name="ustanovit_obimi">Установить обоями</string>
    <string name="ima">Имя:</string>
    <string name="razmer">Размер:</string>
    <string name="deletes">Удалено</string>
    <string name="error">ошибка</string>
    <string name="viberite_kuda_otpravlat">Выберите куда отправить</string>


</resources>
